# ComplexCalc

./: .gitignore  CMakeLists.txt  ComplexCalc.rc  Readme.md  complexcalc.cpp  complexcalc.h  complexcalc.ui  complexcalc_ui.h  complexvar.cpp  complexvar.h  customarrow.cpp  customarrow.h  glwindowcontrol.cpp  glwindowcontrol.h  label.cpp  label.h  main.cpp  mainglwidget.cpp  mainglwidget.h  openglwindow.cpp  openglwindow.h  scrollwidget.cpp  scrollwidget.h  spline.cpp  spline.h  trace.cpp  trace.h
.github/workflows/: cmake-create-release.yml  cmake-multi-platform.yml  cmake-win-msvc.yml
header/: complexcalc.h  complexvar.h  customarrow.h  openglwindow.h  scrollwidget.h  trace.h
resources/: ComplexCalc.desktop  complexcalc.qrc
source/: complexcalc.cpp  complexvar.cpp  customarrow.cpp  label.cpp  main.cpp  openglwindow.cpp  scrollwidget.cpp  trace.cpp
